--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
-    "epenbook-components": "file:..",
     "mathjax-react": "^2.0.1",
-    "react": "file:../node_modules/react",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "file:../node_modules/react-dom",
-    "react-scripts": "file:../node_modules/react-scripts"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
