--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playground",
+  "name": "book_template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,16 +12,14 @@
     "bootstrap": "^5.2.3",
     "epenbook-components": "file:..",
     "mathjax-react": "^2.0.1",
-    "react": "file:../node_modules/react",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "file:../node_modules/react-dom",
-    "react-scripts": "file:../node_modules/react-scripts"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
