--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "book_template",
+  "name": "worksheet_template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "mathjax-react": "^2.0.1",
-    "epenbook-components": "file:..",
     
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
